Fix: padding, margin and gap fix for header1 and wrapper class

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,12 +3,14 @@ body{
   padding 0;
 }
 h1 {
+  padding:0;
+  margin:0;
   color: blue;
 }
 .wrapper {
   display: flex;
   margin: 0 auto;
-  gap: 2rem;
+  gap: 1rem;
   padding: 2rem;
   flex-direction: column;
   align-items: center;
@@ -18,8 +20,8 @@ h1 {
 .container{
   display: flex;
   flex-wrap: wrap;
-  width: 960px;
-  heigth:960px;
+  width: 600px;
+  heigth:600px;
 }
 .buttons-menu{
   display:flex;
